--- a/packages/loader-ts/package.json
+++ b/packages/loader-ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hirarijs/loader-ts",
-  "version": "1.0.0",
+  "version": "1.0.12",
   "description": "TypeScript loader plugin for HirariJS loader",
   "type": "module",
   "main": "./dist/index.cjs",
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@hirarijs/loader": "workspace:*",
+    "@types/node": "^25.0.3",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3"
   }
