--- a/packages/loader/package.json
+++ b/packages/loader/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hirarijs/loader",
-  "version": "1.0.8",
+  "version": "1.0.11",
   "description": "Runtime loader for HirariJS that wires loader plugins and config",
   "type": "module",
   "main": "./dist/index.cjs",
@@ -33,6 +33,7 @@
     "source-map-support": "^0.5.21"
   },
   "peerDependencies": {
+    "@hirarijs/loader-cjs-interop": "*",
     "@hirarijs/loader-ts": "*",
     "@hirarijs/loader-tsx": "*",
     "@hirarijs/loader-vue": "*"
