--- a/packages/loader-cjs-interop/tsconfig.json
+++ b/packages/loader-cjs-interop/tsconfig.json
@@ -4,9 +4,10 @@
     "outDir": "dist",
     "rootDir": "..",
     "module": "NodeNext",
-    "moduleResolution": "NodeNext"
+    "moduleResolution": "NodeNext",
+    "target": "ES2020"
   },
-  "references": [
-    { "path": "../loader" }
+  "include": [
+    "src/**/*"
   ]
 }
